syntax = "proto3";
package api;
option go_package = "pkg/pb";

import "google/api/annotations.proto";

service MovieService {
  rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {
    option (google.api.http) = {
      post: "/api/movie"
      body: "*"
    };
  }

  rpc GetMovie(GetMovieRequest) returns (GetMovieResponse) {
    option (google.api.http) = {
      get: "/api/movie/{id}"
    };
  }

  rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {
    option (google.api.http) = {
      put: "/api/movie/{id}"
      body: "*"
    };
  }

  rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {
    option (google.api.http) = {
      delete: "/api/movie/{id}"
    };
  }

  // Streams
  rpc CreateMovies(stream CreateMovieRequest) returns (CreateMoviesResponse);
  rpc GetMovies(GetMoviesRequest) returns (stream GetMovieResponse);
}

message Movie {
  string id = 1;
  string title = 2;
  string genre = 3;
  string director = 4;
  uint32 year = 5;
}

message CreateMovieRequest {
  string title = 2;
  string genre = 3;
  string director = 4;
  uint32 year = 5; 
}

message CreateMovieResponse {
  string id = 1;
}

message CreateMoviesResponse {
  repeated string ids = 1;
}

message GetMovieRequest {
  string id = 1;
}

message GetMoviesRequest {
}

message GetMovieResponse {
  Movie movie = 1;
}

message UpdateMovieRequest {
  string id = 1;
  string title = 2;
  string genre = 3;
  string director = 4;
  uint32 year = 5;
}

message UpdateMovieResponse {
  Movie movie = 1;
}

message DeleteMovieRequest {
  string id = 1;
}

message DeleteMovieResponse {
  bool success = 1;
}